--- a/Token-Service/src/main/resources/application.properties
+++ b/Token-Service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Token-service
 server.port=8400
+logging.file.name=add your file path
 
 spring.cloud.config.enabled=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
