swagger and redis added

--- a/Token-Service/src/main/resources/application.properties
+++ b/Token-Service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=Token-service
 server.port=8400
-logging.file.name=add your file path
+logging.file.name=D:/SMS_POC_MICROSERVICES/Logs/Token-Service-logs/Token-Service.log
+
 
 spring.cloud.config.enabled=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
@@ -19,3 +20,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 generate.token.expiry=2
 eureka.instance.preferIpAddress=true
+
+# swagger-ui custom path
+springdoc.api-docs.path=/aggregate/token-service/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
